--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "to do list version-1",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "author": "Andre",
   "license": "ISC",
   "engines":{
-    "node":"18.12.1"
+    "node":"18.12.1",
+    "npm": "9.2.0"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
