--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "to do list version-1",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
-  },
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+    },
   "author": "Andre",
   "license": "ISC",
   "engines":{
